--- a/servers/index.html
+++ b/servers/index.html
@@ -30,19 +30,6 @@
             "TrueNAS": "truenas.local"
         };
 
-        const pingHost = (ip) => {
-            return new Promise((resolve, reject) => {
-                const img = new Image();
-                img.onload = () => {
-                    resolve(true);
-                };
-                img.onerror = () => {
-                    reject(false);
-                };
-                img.src = `http://${ip}/ping.png?_=${Date.now()}`;
-            });
-        };
-
         const addMenuItem = (host, ip) => {
             const menu = document.querySelector('.menu');
             const menuItem = document.createElement('li');
@@ -50,13 +37,40 @@
             const link = document.createElement('a');
             link.href = `http://${ip}`;
             link.target = '_blank';
-            link.textContent = host.toUpperCase();
+            link.textContent = host;
             menuItem.appendChild(link);
             menu.appendChild(menuItem);
         };
 
+        (function (root, factory) {
+            if (typeof define === 'function' && define.amd) { define([], factory); } else if (typeof module === 'object' && module.exports) { module.exports = factory(); } else { root.ping = factory(); }
+        }(this, function () {
+            function request_image(url) {
+                return new Promise(function (resolve, reject) {
+                    var img = new Image();
+                    img.onload = function () { resolve(img); };
+                    img.onerror = function () { reject(url); };
+                    img.src = url + '?random-no-cache=' + Math.floor((1 + Math.random()) * 0x10000).toString(16);
+                });
+            }
+            function ping(url, multiplier) {
+                return new Promise(function (resolve, reject) {
+                    var start = (new Date()).getTime();
+                    var response = function () {
+                        var delta = ((new Date()).getTime() - start);
+                        delta *= (multiplier || 1);
+                        resolve(delta);
+                    };
+                    request_image(url).then(response).catch(response);
+
+                    setTimeout(function () { reject(Error('Timeout')); }, 3000);
+                });
+            }
+            return ping;
+        }));
+
         Object.keys(hosts).forEach((host) => {
-            pingHost(hosts[host])
+            ping(`http://${hosts[host]}`, 1)
                 .then(() => {
                     addMenuItem(host, hosts[host]);
                 })
@@ -64,7 +78,6 @@
                     console.log(`Error pinging host ${hosts[host]}: ${error}`);
                 });
         });
-
     </script>
 </body>
 
