--- a/index.html
+++ b/index.html
@@ -138,11 +138,14 @@
                             <li class="col-6-12 fromBottomLeft">
                                 <h1 class="ae-2">Beryllium</h1>
                                 <div class="ae-3">
-                                    <p class="opacity-8">Beryllium is a first-person shooter multiplayer game that pits
-                                        terrorists and counter-terrorists against each other. The terrorists' goal is to
-                                        plant a bomb while the counter-terrorists' goal is to defuse it. Players can
-                                        also win by eliminating all members of the opposing team.</p>
-                                    <p class="opacity-8">Wanted to learn about Unreal Engine and making games in general.</p>
+                                    <p class="opacity-8">Beryllium is a thrilling multiplayer game where players take on
+                                        the roles of opposing forces: one group aims to achieve certain objectives,
+                                        while the other works to prevent them. The objectives involve strategic actions
+                                        like planting or defusing items, and success can also come from outmaneuvering
+                                        the opposing team. The game offers an exciting mix of teamwork and strategy in a
+                                        competitive environment.</p>
+                                    <p class="opacity-8">Wanted to learn about Unreal Engine and making games in
+                                        general.</p>
                                 </div>
                             </li>
                             <li class="col-1-12">&nbsp;</li>
