--- a/test/index.html
+++ b/test/index.html
@@ -14,6 +14,6 @@
 <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.1.1/model-viewer.min.js"></script>
 
 <!-- Use it like any other HTML element -->
-  <model-viewer src="FP-215-Model.glb"></model-viewer>
+  <model-viewer src="scene.gltf"></model-viewer>
 </body>
 </html>
