--- a/projects/open.html
+++ b/projects/open.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="assets/img/pepe.jpeg" type="image/gif" sizes="16x16">
     <script src="https://cdn.jsdelivr.net/npm/marked@2.1.3/marked.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.1.1/model-viewer.min.js"></script>
     <link rel="stylesheet" href="open.css">
     <title>R3ne's Project List</title>
 </head>
@@ -32,7 +33,9 @@
         <div class="flex-container">
             <div class="content">
                 <div class="image-container">
-                    <img class="main-image" id="mainImage" src="assets/img/logo.gif" alt="Product Image">
+                    <div class="viewer" id="viewer">
+                        <img class="main-image" id="mainImage" src="assets/img/logo.gif" alt="Loading Image">
+                    </div>
                     <div id="thumbnails">
                     </div>
                 </div>
