--- a/servers/index.html
+++ b/servers/index.html
@@ -57,7 +57,7 @@
                         items[index].style.display = "block"; // Use the captured index value
                     }
                 })(i)).catch(function (err) {
-                    console.error('Could not ping remote URL', err);
+                    console.log('Could not ping remote URL', err);
                 });
             }
         };
@@ -72,6 +72,7 @@
                 <li class="menu-item"><a href="https://r3ne.net" target="_blank">Website</a></li>
                 <li class="menu-item" style="display:none"><a href="https://cloud.r3ne.net" target="_blank">Cloud</a></li>
                 <li class="menu-item" style="display:none"><a href="https://r3ne.net/records/" target="_blank">Records</a></li>
+                <li class="menu-item" style="display:none"><a href="https://r3ne.net/projects/" target="_blank">Projects</a></li>
                 <br><br>
                 <li class="menu-item"><a href="./index.html" style="font-size: 15px; display: contents;">Refresh</a></li>
                 <li class="menu-item" style="display:none"><a href="https://192.168.1.5" target="_blank">VmWare</a></li>
