--- a/index.html
+++ b/index.html
@@ -301,15 +301,15 @@ dRiDnrMJGNYx5N+vGiytYjc8RqGdD3Qm0tJpDXTUL82dHI70OctKdDbh4tSj
                     </div>
                     <p class="hero ae-2"><span><a href="projects/index.html">Click for more Projects!</a></span></p>
                     <div class="fix-9-12">
-                        <a href="https://www.linkedin.com/in/r3ne/" target="_blank" class="button hollow ae-5"><img
+                        <a href="r/LinkedIn.html" target="_blank" class="button hollow ae-5"><img
                                 src="assets/img/LI-Logo.png" height="50" /></a>
                     </div>
                     <div class="fix-9-12">
-                        <a href="https://github.com/JAAKKQ" target="_blank" class="button hollow ae-5"><img
+                        <a href="r/GitHub.html" target="_blank" class="button hollow ae-5"><img
                                 src="assets/img/GitHub_Logo_White.png" height="63" /></a>
                     </div>
                     <div class="fix-9-12">
-                        <a href="https://twitter.com/karkkainen_net" target="_blank" class="button hollow ae-5"><img
+                        <a href="r/X.html" target="_blank" class="button hollow ae-5"><img
                                 src="assets/img/x-logo-white.png" height="63" /></a>
                     </div>
                 </div>
