--- a/cv/rene.html
+++ b/cv/rene.html
@@ -1,5 +1,5 @@
-<span id="a">karkkainen@r3ne.net</span>:<span id="b">~</span><span id="c">$</span> cd karkkainen/About_Me
-<span id="a">karkkainen@r3ne.net</span>:<span id="b">~</span><span id="c">$</span> cat rene.txt<br /><br />
+<span id="a">rene@karkkainen.net</span>:<span id="b">~</span><span id="c">$</span> cd karkkainen/About_Me
+<span id="a">rene@karkkainen.net</span>:<span id="b">~</span><span id="c">$</span> cat rene.txt<br /><br />
 "<span id="k">Hey there, nice to see you here.</span>" My name is Rene Kärkkäinen.
 <p>Welcome,</p>
 <p>
@@ -16,7 +16,7 @@
 <p>You can visit my LinkedIn, here: <a href="https://www.linkedin.com/in/r3ne/">LinkedIn</a> <br /></p>
 
 You can also contact me through email, feel free to send me an email at
-<a href="mailto: karkkainen@r3ne.net">"rene@karkkainen.net"</a>.
+<a href="mailto: rene@karkkainen.net">"rene@karkkainen.net"</a>.
 
 <br>
 <b>Best Regards,</b>
