--- a/cv/rene.html
+++ b/cv/rene.html
@@ -12,7 +12,7 @@
   <br><br><br>I am seeking opportunities in IT from all over the world, especially in cyber security, data analysis, or machine learning, where I can also contribute to enhancing the cyber security of the systems and applications I work on. I work well in a team, learn quickly, and solve problems effectively.
   <br /><br /><br />You can checkout some of my projects on my website <a href="../index.html">karkkainen.net</a>, but if you are more tech savy, here is my GitHub <a href="../r/github.html">GitHub.com/JAAKKQ</a>.
 </p>
-<p>You can visit my LinkedIn, here: <a href="../r/linkedin.html">LinkedIn</a> <br /></p>
+<p>You can visit my LinkedIn, here: <a href="../r/linkedin.html">LinkedIn.com/n/renekarkkainen</a> <br /></p>
 
 You can also contact me through email, feel free to send me an email at
 <a href="mailto: rene@karkkainen.net">"rene@karkkainen.net"</a>.
