--- a/cv/rene.html
+++ b/cv/rene.html
@@ -9,6 +9,11 @@
   I am very laid back and try to approach situations with positivity and humor. 
   <br /><br /><br />I am passionate about cyber security, the practice of protecting systems, networks, and programs from digital attacks. I have learned some basic concepts and skills in cyber security, such as encryption, authentication, and network security. I have completed various courses and certificates in these areas.
   <br /><br /><br />I have also worked at WithSecure (formerly F-Secure), the leading cyber security company in the nordics. I have learned how to use cutting-edge technologies and methodologies to create secure and scalable systems and applications.
+  <br>
+  <br><br><br>I have set up a home lab, building my server network from scratch with a physical server running ESXi. To organize and secure the network, within the ESXi environment, I've configured pfSense as the firewall. Inside pfSense, there's not only OpenVPN for remote access but also DHCP and DNS servers. Additionally, I've implemented Suricata for intrusion detection and prevention. To further organize and secure the home lab network effectively, I've utilized VLANs to create multiple isolated networks.
+  <br><br><br>On the ESXi server, I've deployed TrueNAS Scale, which is connected to ESXi's file system via NFS, serving as redundant server storage. Furthermore, there is an Ubuntu Server dedicated to hosting the NGINX web server for my websites and some organizational sites. Another Ubuntu Server is designated for testing and running untrusted code.
+  <br><br><br>Each server operates on networks designed for specific use cases; for example, the Web Server operates on the "Secure" Network, while the Ubuntu Server for testing is on the "Unsecure" Network. ESXi, pfSense, and TrueNAS operate on the "Trusted" network.
+  <br>
   <br><br><br>I am seeking opportunities in IT from all over the world, especially in cyber security, data analysis, or machine learning, where I can also contribute to enhancing the cyber security of the systems and applications I work on. I work well in a team, learn quickly, and solve problems effectively.
   <br /><br /><br />You can checkout some of my projects on my website <a href="../index.html">karkkainen.net</a>, but if you are more tech savy, here is my GitHub <a href="../r/github.html">GitHub.com/JAAKKQ</a>.
 </p>
