--- a/cv/rene.html
+++ b/cv/rene.html
@@ -1,5 +1,5 @@
-<span id="a">rene@karkkainen.net</span>:<span id="b">~</span><span id="c">$</span> cd karkkainen/About_Me
-<span id="a">rene@karkkainen.net</span>:<span id="b">~</span><span id="c">$</span> cat rene.txt<br /><br />
+<span id="a">rene@karkkainen.net</span>:<span id="b">~</span><span id="c">$</span> cd /home/rene/
+<span id="a">rene@karkkainen.net</span>:<span id="b">~</span><span id="c">$</span> cat aboutMe.txt<br /><br />
 "<span id="k">Hey there, nice to see you here.</span>" My name is Rene Kärkkäinen.
 <p>Welcome,</p>
 <p>
@@ -17,9 +17,9 @@
   <br><br><br>I am seeking opportunities in IT from all over the world, especially in cyber security, data analysis, or machine learning, where I can also contribute to enhancing the cyber security of the systems and applications I work on. I work well in a team, learn quickly, and solve problems effectively.
   <br /><br /><br />You can checkout some of my projects on my website <a href="../index.html">karkkainen.net</a>, but if you are more tech savy, here is my GitHub <a href="../r/github.html">GitHub.com/JAAKKQ</a>.
 </p>
-<p>You can visit my LinkedIn, here: <a href="../r/linkedin.html">LinkedIn.com/n/renekarkkainen</a> <br /></p>
+<p>You can visit my LinkedIn, here: <a href="../r/linkedin.html">LinkedIn.com/n/ReneKarkkainen</a> <br /></p>
 
-Feel free to send me an email at <a href="mailto: rene@karkkainen.net">"rene@karkkainen.net"</a>.
+Feel free to send me an email at <a href="mailto: rene@karkkainen.net">rene@karkkainen.net</a>.
 
 <br>
 <b>Thank you for reading!</b>
