--- a/cv/rene.html
+++ b/cv/rene.html
@@ -1,23 +1,18 @@
 <span id="a">rene@karkkainen.net</span>:<span id="b">~</span><span id="c">$</span> cd /home/rene/
 <span id="a">rene@karkkainen.net</span>:<span id="b">~</span><span id="c">$</span> cat aboutMe.txt<br /><br />
 "<span id="k">Hey there, nice to see you here.</span>" My name is Rene Kärkkäinen.
-<p>Welcome,</p>
 <p>
-  I am a student at Business College Helsinki, pursuing a vocational degree in IT and high school at the same time, balancing both academic and practical education.
-</p>
-<p>
-  I am very laid back and try to approach situations with positivity and humor. 
-  <br /><br /><br />I am passionate about cyber security, the practice of protecting systems, networks, and programs from digital attacks. I have learned some basic concepts and skills in cyber security, such as encryption, authentication, and network security. I have completed various courses and certificates in these areas.
-  <br /><br /><br />I have also worked at WithSecure (formerly F-Secure), the leading cyber security company in the nordics. I have learned how to use cutting-edge technologies and methodologies to create secure and scalable systems and applications.
-  <br><br><br>I have set up my own home lab, building my server network from scratch with a physical server running ESXi. To organize and secure the network, within the ESXi environment, I've configured pfSense as the firewall. Inside pfSense, there's not only OpenVPN servers for remote access but also DHCP and DNS servers. Additionally, I've implemented Suricata for intrusion detection and prevention. To further organize and secure the home lab network effectively, I've utilized VLANs to create multiple isolated networks.
-  <br><br><br>On the ESXi server, I've deployed TrueNAS Scale, which is connected to ESXi's file system via NFS, serving as redundant server storage. Furthermore, there is an Ubuntu Server dedicated to hosting the NGINX web server for my websites and some organizational sites. Another Ubuntu Server is designated for testing and running untrusted code.
-  <br><br><br>Each server operates on networks designed for specific use cases. For example, the Web Server operates on the "Secure" Network, while the Ubuntu Server for testing is on the "Unsecure" Network. ESXi, pfSense, and TrueNAS operate on the "Trusted" network. I've also established my own certificate authority, which I use to create certificates for the servers. This hands-on experience has deepened my understanding of network configuration, ensuring smooth DNS resolution, troubleshooting DHCP issues, and addressing challenges in various other components of the system. These practical encounters have proven invaluable in honing my skills and maintaining the robustness of the entire home lab setup.
-  <br><br><br>I am seeking opportunities in IT from all over the world, especially in cyber security, data analysis, or machine learning, where I can also contribute to enhancing the cyber security of the systems and applications I work on. I work well in a team, learn quickly, and solve problems effectively.
-  <br /><br /><br />You can checkout some of my projects on my website <a href="../index.html">karkkainen.net</a>, but if you are more tech savy, here is my GitHub <a href="../r/github.html">GitHub.com/JAAKKQ</a>.
-</p>
-<p>You can visit my LinkedIn, here: <a href="../r/linkedin.html">LinkedIn.com/n/ReneKarkkainen</a> <br /></p>
+  Hello! I'm Rene Kärkkäinen, a student at Business College Helsinki, pursuing a vocational degree in IT while juggling high school. I thrive on a blend of academic knowledge and hands-on experience.
 
-Feel free to send me an email at <a href="mailto: rene@karkkainen.net">rene@karkkainen.net</a>.
+  Passionate about cyber security, I've acquired skills in encryption, authentication, and network security through various courses and certificates. My professional journey includes valuable experience at WithSecure (formerly F-Secure), where I mastered cutting-edge technologies for creating secure and scalable systems.
 
-<br>
-<b>Thank you for reading!</b>
+  At home, I've built a robust server network from scratch. A physical server running ESXi serves as the backbone, fortified with pfSense as the firewall, OpenVPN servers for remote access, DHCP, DNS, and Suricata for intrusion detection. I've organized the network using VLANs, creating isolated environments for different purposes.
+
+  Within the ESXi server, TrueNAS Scale provides redundant storage connected via NFS. An Ubuntu Server hosts my NGINX web server, while another serves as a safe space for testing potentially risky code.
+
+  Each server operates on designated networks—Web Server on "Secure," Testing Server on "Unsecure," and ESXi, pfSense, and TrueNAS on "Trusted." I've established my certificate authority, adding a layer of security by creating certificates for all servers. This hands-on experience has honed my skills in network configuration, DNS troubleshooting, DHCP management, and system troubleshooting.
+ 
+  Actively seeking global IT opportunities, particularly in cyber security, data analysis, or machine learning, I bring a quick learning ability, effective problem-solving skills, and strong teamwork. Explore my projects on <a href="../index.html">karkkainen.net</a> or delve into my tech side on GitHub <a href="../r/github.html">GitHub.com/JAAKKQ</a>.
+
+  Connect with me on <a href="../r/linkedin.html">LinkedIn.com/n/ReneKarkkainen</a> or drop me an email at <a href="mailto: rene@karkkainen.net">rene@karkkainen.net</a>. <b>Thank you for reading!</b>
+</p>
